--- a/.kube/deployment.yaml
+++ b/.kube/deployment.yaml
@@ -13,20 +13,6 @@ metadata:
   name: am-stats-legacy
   namespace: aftermath-services
 spec:
-  affinity:
-    nodeAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-        nodeSelectorTerms:
-          - matchExpressions:
-              - key: "cloud.google.com/gke-nodepool"
-                operator: In
-                values:
-                  - "spot-pool-1-cpu"
-  tolerations:
-    - key: high-cpu
-      operator: Equal
-      value: required
-      effect: NoExecute
   replicas: 2
   selector:
     matchLabels:
@@ -36,6 +22,20 @@ spec:
       labels:
         app: am-stats-legacy
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: "cloud.google.com/gke-nodepool"
+                    operator: In
+                    values:
+                      - "spot-pool-1-cpu"
+      tolerations:
+        - key: high-cpu
+          operator: Equal
+          value: required
+          effect: NoExecute
       imagePullSecrets:
         - name: regcred
       containers:
@@ -47,3 +47,7 @@ spec:
           env:
             - name: PORT
               value: "3000"
+          resources:
+            limits:
+              memory: "1024Mi"
+              cpu: "1000m"
